<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_48dp"
        android:title="@string/label_home" />
    <item android:title="@string/label_movie">
        <menu>
            <item
                android:id="@+id/nav_top_rated"
                android:icon="@drawable/ic_thumb_up_black_48dp"
                android:title="@string/label_top_rated" />
            <item
                android:id="@+id/nav_now_playing"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/label_now_playing" />
            <item
                android:id="@+id/nav_up_coming"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/label_up_coming" />
            <item
                android:id="@+id/nav_fav"
                android:icon="@drawable/ic_favorite_black_36dp"
                android:title="@string/label_fav" />
        </menu>
    </item>
    <item android:title="@string/label_system">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/label_settings" />
        </menu>
    </item>


</menu>
