<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_app_bg"
    android:padding="@dimen/padding_components_6dp"
    android:id="@+id/fragment_home_refresh"
    tools:context=".view.ui.HomeActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Top Rated-->
            <LinearLayout
                android:layout_marginBottom="@dimen/padding_components_3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:theme="@style/textLabelLager"
                    android:layout_gravity="start|center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_top_rated"/>
                <TextView
                    android:id="@+id/label_top_rated_more"
                    android:theme="@style/textLabel"
                    android:gravity="end|center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_more"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:clipToPadding="false"
                android:id="@+id/rv_home_top_rated"
                android:layout_width="match_parent"
                android:layout_height="150dp"/>
            <!--Now Playing-->
            <LinearLayout
                android:layout_marginTop="@dimen/margin_components_10dp"
                android:layout_marginBottom="@dimen/padding_components_3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:theme="@style/textLabelLager"
                    android:layout_gravity="start|center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_now_playing"/>
                <TextView
                    android:id="@+id/label_now_playing_more"
                    android:theme="@style/textLabel"
                    android:gravity="end|center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_more"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:clipToPadding="false"
                android:id="@+id/rv_home_now_playing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <!--Up Coming-->
            <LinearLayout
                android:layout_marginTop="@dimen/margin_components_10dp"
                android:layout_marginBottom="@dimen/padding_components_3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:theme="@style/textLabelLager"
                    android:layout_gravity="start|center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_up_coming"/>
                <TextView
                    android:id="@+id/label_up_coming_more"
                    android:theme="@style/textLabel"
                    android:gravity="end|center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_more"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:clipToPadding="false"
                android:id="@+id/rv_home_up_coming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.v4.widget.SwipeRefreshLayout >